--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ wget = "^3.2"
 requests = "^2.28.1"
 requests-oauthlib = "^1.3.1"
 beautifulsoup4 = "^4.11.1"
+tonie_api = { git = "https://github.com/moritzj29/tonie_api" }
 config-with-yaml = "^0.1.0"
 
 
