--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,15 @@
 [tool.poetry]
 name = "tonie-podcast-sync"
-version = "0.1.0"
+version = "0.1.3"
 description = "allows synching podcast episodes to creative tonies"
 authors = ["Alexander Hartmann <16985220+alexhartm@users.noreply.github.com>"]
 readme = "README.md"
 license = "MIT"
-packages = [{include = "toniepodcastsync.py"}]
+packages = [
+    {include = "toniepodcastsync.py"},
+    {include = "podcast.py"},
+    {include = "tonie_api"}
+]
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -14,7 +18,6 @@ requests = "^2.28.1"
 requests-oauthlib = "^1.3.1"
 beautifulsoup4 = "^4.11.1"
 config-with-yaml = "^0.1.0"
-
 
 [build-system]
 requires = ["poetry-core"]
