--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,18 @@
 [tool.poetry]
 name = "tonie-podcast-sync"
-version = "1.0.0"
+version = "1.0.1"
 description = "allows synching podcast episodes to creative tonies"
 authors = ["Alexander Hartmann <16985220+alexhartm@users.noreply.github.com>"]
+repository = "https://github.com/alexhartm/tonie-podcast-sync"
 readme = "README.md"
 license = "MIT"
+keywords = ["toniebox", "podcast"]
 packages = [
     {include = "toniepodcastsync.py"},
     {include = "podcast.py"},
     {include = "tonie_api"}
 ]
+
 
 [tool.poetry.dependencies]
 python = "^3.9.2"
