--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "tonie-podcast-sync"
-version = "1.0.1"
+version = "1.0.2"
 description = "allows synching podcast episodes to creative tonies"
 authors = ["Alexander Hartmann <16985220+alexhartm@users.noreply.github.com>"]
 repository = "https://github.com/alexhartm/tonie-podcast-sync"
@@ -21,6 +21,7 @@ requests = "^2.25.1"
 requests-oauthlib = "^1.3.0"
 beautifulsoup4 = "^4.10.0"
 config-with-yaml = "^0.1.0"
+lxml="^4.9.2"
 
 [build-system]
 requires = ["poetry-core"]
