--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,17 @@
 [tool.poetry]
 name = "tonie-podcast-sync"
-version = "1.1.3"
+version = "1.1.4"
 description = "allows synching podcast episodes to creative tonies"
 authors = ["Alexander Hartmann <16985220+alexhartm@users.noreply.github.com>"]
 repository = "https://github.com/alexhartm/tonie-podcast-sync"
 readme = "README.md"
 license = "MIT"
 keywords = ["toniebox", "podcast"]
-packages = [{ include = "toniepodcastsync.py" }, { include = "podcast.py" }]
+packages = [
+    { include = "toniepodcastsync.py" },
+    { include = "podcast.py" },
+    { include = "tonie_api" },
+]
 
 [tool.poetry.dependencies]
 python = "^3.10.11"
