--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "tonie-podcast-sync"
-version = "1.1.4"
+version = "1.1.5"
 description = "allows synching podcast episodes to creative tonies"
 authors = ["Alexander Hartmann <16985220+alexhartm@users.noreply.github.com>"]
 repository = "https://github.com/alexhartm/tonie-podcast-sync"
@@ -24,6 +24,11 @@ feedparser = "^6.0.10"
 #     to other git projects, so this will fail during 'poetry publish'.
 #     see e.g. https://github.com/python-poetry/poetry/issues/4471
 #     Workaround is currently to have tonie_api included as a submodule 
+# the following three dependencies are used by tonie_api. These lines can
+#     be removed once tonie_api is included as a normal pip package 
+requests = "^2.31.0"
+oauthlib = "^3.2.2"
+requests-oauthlib = "^1.3.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
