--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,28 +7,13 @@ repository = "https://github.com/alexhartm/tonie-podcast-sync"
 readme = "README.md"
 license = "MIT"
 keywords = ["toniebox", "podcast"]
-packages = [
-    { include = "toniepodcastsync.py" },
-    { include = "podcast.py" },
-    { include = "tonie_api" },
-]
+packages = [{ include = "toniepodcastsync.py" }, { include = "podcast.py" }]
 
 [tool.poetry.dependencies]
 python = "^3.10.11"
 wget = "^3.2"
 feedparser = "^6.0.10"
-# tonie-api = { git = "https://github.com/moritzj29/tonie_api.git" }
-#
-#  -- had to uncomment the tonie-api dependency unforunately. 
-#     reason is that pypi does not accept direct dependencies
-#     to other git projects, so this will fail during 'poetry publish'.
-#     see e.g. https://github.com/python-poetry/poetry/issues/4471
-#     Workaround is currently to have tonie_api included as a submodule 
-# the following three dependencies are used by tonie_api. These lines can
-#     be removed once tonie_api is included as a normal pip package 
-requests = "^2.31.0"
-oauthlib = "^3.2.2"
-requests-oauthlib = "^1.3.1"
+tonie-api = "^0.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
@@ -36,7 +21,7 @@ pytest = "^7.4.0"
 [tool.ruff]
 # Add "Q" to the list of enabled codes.
 select = ["ALL"]
-ignore = ["AN101"]
+ignore = ["ANN101"]
 line-length = 120
 target-version = "py310"
 
