--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ rich = "^13.5.2"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
 pytest-mock = "^3.11.1"
+responses = "^0.23.3"
 
 [tool.ruff]
 # Add "Q" to the list of enabled codes.
@@ -33,7 +34,17 @@ convention = "google"
 docstring-quotes = "double"
 
 [tool.ruff.per-file-ignores]
-"tests/*.py" = ["D", "A", "ANN", "S", "SLF", "PLR2004", "ARG002", "INP001"]
+"tests/*.py" = [
+    "D",
+    "A",
+    "ANN",
+    "S",
+    "SLF",
+    "PLR2004",
+    "ARG002",
+    "INP001",
+    "FLY",
+]
 
 [tool.black]
 line-length = 120
