--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ python = "^3.10.11"
 feedparser = "^6.0.10"
 tonie-api = "^0.1.1"
 rich = "^13.5.2"
+ruff = "^0.1.13"
+black = "^23.12.1"
+pre-commit = "^3.6.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
