--- a/.github/workflows/format_linting.yml
+++ b/.github/workflows/format_linting.yml
@@ -1,4 +1,4 @@
-name: Python application
+name: Format and Linting
 
 on:
   push:
@@ -10,7 +10,7 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  formatting-linting:
 
     runs-on: ubuntu-latest
 
@@ -40,3 +40,14 @@ jobs:
     - name: Lint with ruff
       run: |
         poetry run ruff .
+
+
+  status-check:
+    needs:
+      # Require every other job in this workflow
+      - formatting-linting
+    runs-on: ubuntu-latest
+    steps:
+      # Every job needs at least one step, so run
+      #   one that doesn't have any side effects
+      - run: echo ok
