--- a/.github/workflows/test_publish.yml
+++ b/.github/workflows/test_publish.yml
@@ -14,6 +14,7 @@ jobs:
       - name: Publish PyPi package
         uses: code-specialist/pypi-poetry-publish@v1
         with:
+          PACKAGE_DIRECTORY: "."
           ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PUBLISH_REGISTRY_PASSWORD: ${{ secrets.TEST_PYPI_TOKEN }}
           PUBLISH_REGISTRY: "https://test.pypi.org/simple/"
