--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ rich = "^13.5.2"
 ruff = "^0.1.13"
 black = "^23.12.1"
 pre-commit = "^3.6.0"
+pathvalidate = "^3.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
