--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ ruff = "^0.1.13"
 black = "^23.12.1"
 pre-commit = "^3.6.0"
 pathvalidate = "^3.2.0"
+pydub = "^0.25.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
