--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,12 +1,14 @@
 {
   "projectName": "tonie-podcast-sync",
   "projectOwner": "alexhartm",
+  "repoType": "github",
+  "repoHost": "https://github.com",
   "files": [
     "README.md"
   ],
-  "commitType": "docs",
-  "commitConvention": "angular",
-  "contributorsPerLine": 7,
+  "imageSize": 100,
+  "commit": false,
+  "commitConvention": "atom",
   "contributors": [
     {
       "login": "alexhartm",
@@ -39,6 +41,27 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "einvalentin",
+      "name": "Valentin v. Seggern",
+      "avatar_url": "https://avatars.githubusercontent.com/u/230592?v=4",
+      "profile": "https://github.com/einvalentin",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "stefan14808",
+      "name": "stefan14808",
+      "avatar_url": "https://avatars.githubusercontent.com/u/79793534?v=4",
+      "profile": "https://github.com/stefan14808",
+      "contributions": [
+        "code",
+        "ideas"
+      ]
     }
-  ]
+  ],
+  "contributorsPerLine": 7,
+  "linkToUsage": false
 }
