--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,10 +5,11 @@ repos:
       - id: check-yaml
       - id: end-of-file-fixer
       - id: trailing-whitespace
-  - repo: https://github.com/python-poetry/poetry
-    rev: '1.5.1'
+  - repo: https://github.com/astral-sh/uv-pre-commit
+    # uv version.
+    rev: 0.7.4
     hooks:
-      - id: poetry-check
+      - id: uv-lock
   - repo: local
     hooks:
       - id: ruff format
