fix unit tests, improve gh actions

--- a/.github/workflows/test_publish.yml
+++ b/.github/workflows/test_publish.yml
@@ -1,4 +1,4 @@
-name: Build and publish python package
+name: Build and publish python package (Test PyPI)
 
 on:
   workflow_dispatch:
@@ -7,7 +7,7 @@ jobs:
   publish-service-client-package:
     runs-on: ubuntu-latest
     steps:
-      - name: Publish PyPi package
+      - name: Publish PyPi package (Test PyPI)
         uses: code-specialist/pypi-poetry-publish@v1
         with:
           PACKAGE_DIRECTORY: "./"
