--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,4 +1,4 @@
-name: Format and Lint
+name: Run Tests
 
 on:
   push:
@@ -7,21 +7,13 @@ on:
   pull_request:
 
 jobs:
-  build:
+  tests:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.11"]
-
     steps:
       - uses: actions/checkout@v4
       - name: Install uv
         uses: astral-sh/setup-uv@v6
       - name: Install dependencies
         run: uv sync --locked --all-extras --dev
-      - name: Lint with ruff
-        run: |
-          ruff check .
-      - name: Format with ruff
-        run: |
-          ruff format --check --diff
+      - name: Run unit tests
+        run: uv run pytest tests/
