--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -14,7 +14,8 @@ jobs:
       - name: install ffmpeg dependency
         run: |
           sudo apt-get update
-          sudo apt-get install -y --no-recommends ffmpeg
+          sudo apt-get install --yes no-install-recommends \
+            ffmpeg
       - name: Install uv
         uses: astral-sh/setup-uv@v6
       - name: Install dependencies
