--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,12 @@ repos:
   - repo: local
     hooks:
       - id: ruff format
-        name: ruff
-        entry: ruff format
+        name: ruff format
+        entry: ruff format --check --diff
+        language: system
+        types: [python]
+      - id: ruff check
+        name: ruff check
+        entry: ruff check .
         language: system
         types: [python]
