--- a/.gitignore
+++ b/.gitignore
@@ -151,4 +151,4 @@ package.json
 .secrets.*
  
 # local helper script
-tonie_podcast_sync/tonie_update.py
+tonie_podcast_sync/tonie_update.py.DS_Store
