--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "tonie-podcast-sync"
-version = "3.3.1"
+version = "3.3.2"
 description = "allows synching podcast episodes to creative tonies"
 authors = [{ name = "Alexander Hartmann", email = "16985220+alexhartm@users.noreply.github.com" }]
 license = "MIT"
@@ -17,6 +17,7 @@ dependencies = [
     "dynaconf>=3.2.3",
     "typer>=0.16.0",
     "tomli-w>=1.0.0",
+    "audioop-lts>=0.2.0; python_version >= '3.13'",
 ]
 
 [project.scripts]
