--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,9 @@ dev = [
     "pre-commit>=3.6.0",
     "responses>=0.23.3",
 ]
+docs = [
+    "mkdocs-material>=9.5.0",
+]
 
 [tool.ruff]
 # Add "Q" to the list of enabled codes.
