--- a/.github/workflows/test_docs_build.yml
+++ b/.github/workflows/test_docs_build.yml
@@ -11,9 +11,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
       - name: Install uv
         uses: astral-sh/setup-uv@v6
+
       - name: Install dependencies (includes docs)
         run: uv sync --locked --all-extras --dev
-      - name: Build documentation
+
+      - name: Test MkDocs build
         run: uv run mkdocs build --strict
+
+      - name: Test Mike version deploy (dry-run)
+        run: |
+          # Configure git for mike (required even for dry-run)
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          # Test that mike can deploy without actually pushing
+          # This validates the mike configuration and version provider setup
+          uv run mike deploy --no-redirect test-version
