--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,11 @@ site_author: Alexander Hartmann
 repo_url: https://github.com/alexhartm/tonie-podcast-sync
 repo_name: alexhartm/tonie-podcast-sync
 
+extra:
+  version:
+    provider: mike
+    default: latest
+
 theme:
   name: material
   palette:
