Add container detection and TPS_SOFT_WRAP env var for console soft wrap
- Add container_detection.py module to detect Docker/Podman/Kubernetes environments
- Auto-disable console soft_wrap when running in a container
- Add TPS_SOFT_WRAP environment variable for explicit user override
- Fix .get() call to use default=True keyword argument
- Add comprehensive tests for soft wrap setting and container detection
- Update contributors list

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -70,6 +70,15 @@
         "bug",
         "code"
       ]
+    },
+    {
+      "login": "Andrewpk",
+      "name": "Andrew Kehrig",
+      "avatar_url": "https://avatars.githubusercontent.com/u/1033728?v=4",
+      "profile": "https://github.com/Andrewpk",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
